--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,5 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-html {
-   max-width: 1440px;
-   margin: auto;
-}
 
 
-header {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-/* #logo {
-  width: 12%;
-  height: 50px;
-  background-color: firebrick;
-} */
-
-nav {
-  width: 35%;
-  height: 50px;
-  /* background-color: cornflowerblue; */
-}
-
-nav ul {
-  width: auto;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-nav ul li a {
-  text-decoration: none;
-  font-size: 13px;
-  /* font-weight: bold; */
-  color: inherit;
-}
-
-nav ul li {
-  list-style: none;
-}
-
-main {
-  margin: auto 3%;
-}
-
-#rs {
-  width: 12%;
-  /* height: 50px; */
-  display: flex;
-  justify-content: space-between;
-}
 
 #info-recette {
   width: 50%;
@@ -496,13 +440,34 @@ main {
 
 .info_content {
   display: flex;
+  justify-content: space-between; /* Espace le titre et les icônes */
   align-items: center;
-  
+  width: 100%; /* Prend toute la largeur disponible */
+  padding: 10px 0; /* Ajoute un peu d'espace vertical */
 }
 
-#icon_socialnetworks {
+.info_content h5 {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+  color: #00000099;
+  margin: 0;
+}
+
+.info_content span {
+  color: red; /* Pour garder le rouge de Webflow */
+}
+
+#icon_social  {
   display: flex;
-  gap: 15px; /* Espacement entre les icônes */
+  gap: 1.5rem; /* Espacement entre les icônes */
+  margin-left: -11%;
+}
+
+.fa-brands {
+  font-size: 20px; /* Taille des icônes */
+  color: #000; /* Couleur noire pour les icônes */
 }
 footer h5 {
 
@@ -511,3 +476,15 @@ footer h5 {
   text-align: center; /* Centre le texte */
   font-size: 1rem;
 }
+
+
+footer nav {
+  /* width: auto; */
+  white-space: nowrap;
+}
+
+
+footer nav ul {
+  gap: 2rem;
+}
+
